# book

./: .gitignore  Makefile  README.md  book.cabal  flake.nix  fourmolu.yaml  index.html  package-lock.json  package.json  tailwind.config.js
app/: Main.hs
ci/: spellcheck.sh
css/: global.css
src/: ch00-00-introduction.lhs  ch01-00-getting-started.lhs
templates/: navbar.html  page.html  pages-list.html
